ADD: Import moduel preprocess

--- a/test/preprocess_test.ipynb
+++ b/test/preprocess_test.ipynb
@@ -12,47 +12,19 @@
    "outputs": [],
    "source": [
     "# 필요한 모듈 임포트\n",
-    "from konlpy.tag import Komoran\n",
-    "\n",
-    "# 전처리 클래스\n",
-    "class Preprocess:\n",
-    "    def __init__(self, userdic=None): # 생성자\n",
-    "        # 형태소 분석기 초기화\n",
-    "        self.komoran = Komoran(userdic=userdic)\n",
-    "        \n",
-    "        # 제외할 품사\n",
-    "        # 관계언 제거, 기호 제거\n",
-    "        # 어미 제거\n",
-    "        # 접미사 제거\n",
-    "        self.exclusion_tags = [\n",
-    "            'JKS', 'JKC', 'JKG', 'JKO', 'JKB', 'JKV', 'JKQ',\n",
-    "            'JX', 'JC',\n",
-    "            'SF', 'SP', 'SS', 'SE', 'SO',\n",
-    "            'EP', 'EF', 'EC', 'ETN', 'ETM',\n",
-    "            'XSN', 'XSV', 'XSA'\n",
-    "        ]\n",
-    "    # 형태소 분석기 POS 태거\n",
-    "    def pos(self, sentence):\n",
-    "        return self.komoran.pos(sentence)\n",
-    "        \n",
-    "    # 불용어 제거 후 필요한 품사 정보만 가져오기\n",
-    "    def get_keywords(self, pos, without_tag=False):\n",
-    "        f = lambda x: x in self.exclusion_tags\n",
-    "        word_list = []\n",
-    "        for p in pos:\n",
-    "            if f(p[1]) is False:\n",
-    "                word_list.append(p if without_tag is False else p[0])\n",
-    "        return word_list"
+    "from utils.Preprocess import Preprocess"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "[0.015s][warning][os,thread] Attempt to protect stack guard pages failed (0x000000016d8e8000-0x000000016d8f4000).\n",
+      "[0.015s][warning][os,thread] Attempt to deallocate stack guard pages failed.\n",
       "[('1시', 'NNG'), ('공원', 'NNP'), ('앞', 'NNG'), ('보', 'VX')]\n",
       "['1시', '공원', '앞', '보']\n"
      ]
@@ -62,7 +34,7 @@
     "sent = \"1시에 공원 앞에서 볼래?\"\n",
     "\n",
     "# 전처리 객체 생성\n",
-    "p = Preprocess(userdic='../utils//user_dic.tsv')\n",
+    "p = Preprocess(userdic='../utils/user_dic.tsv')\n",
     "\n",
     "# 형태소 분석기 실행\n",
     "pos = p.pos(sent)\n",
